# vrfy-lol

./: .env.example  .gitignore  CONTRIBUTING.md  PANEL-REVIEW-2.md  PANEL-REVIEW.md  README.md  THIRD_PARTY_LICENSES.md  package.json  tsconfig.json  wrangler.toml
.ai/: BACKLOG.md  CONSTITUTION.md  DECISIONS.md  GOTCHAS.md  INVARIANTS.md  PATTERNS.md  STATE.md
.context/: BACKLOG.md  CONSTITUTION.md  STATE.md
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  false-positive.yml  feature-request.yml
.github/workflows/: deploy.yml  release-cli.yml
clients/bash/: README.md  vrfy.sh
clients/go/: .goreleaser.yaml  README.md  go.mod  vrfy.go  vrfy_test.go
clients/go/cmd/vrfy/: main.go
clients/node/: README.md  package.json  tsconfig.json
clients/node/src/: cli.ts  index.test.ts  index.ts
clients/python/: README.md  pyproject.toml
clients/python/tests/: test_vrfy.py
clients/python/vrfy/: __init__.py  __main__.py
scripts/: update-disposable-list.ts
src/: errors.ts  index.ts  pow.ts  rate-limiter.ts  spa.ts  types.ts  validate.ts
src/data/: disposable.ts  free-providers.ts  privacy-relays.ts  providers.ts  role-accounts.ts  typos.ts
src/services/: domain-intel.ts
src/validators/: action.ts  confidence.ts  dns-security.ts  dns-services.ts  domain-heuristics.ts  local-part-pattern.ts  mx-fingerprint.ts  mx.ts  privacy-relay.ts  provider.ts  role-account.ts  subaddress.ts  syntax.ts  typo.ts
tests/: pow.test.ts  validators.test.ts
