[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vrfy"
version = "1.0.0"
description = "Email validation — no SMTP probes, no API keys, proof-of-work anti-abuse"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "yokedotlol"}]
keywords = ["email", "validation", "verify", "disposable"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://vrfy.lol"
Repository = "https://github.com/yokedotlol/vrfy-lol"
Documentation = "https://vrfy.lol/api/docs"

[project.scripts]
vrfy = "vrfy.__main__:main"

[tool.setuptools.packages.find]
include = ["vrfy*"]
